--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/restjam.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RestJAM</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="preload" href="src/assets/images/restJam_hero1_mobile.webp" as="image" media="(max-width: 768px)">
 </head>
 
 <body>
