fix: Enhance user sync logic and improve error handling
- Added null check for authenticated user in `syncUser` resolver to prevent errors.
- Improved logging for user sync operations in `useAuth` and `useNavbar` hooks.
- Preload hero images in `index.html` for optimized loading experience.

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
   <link rel="modulepreload" href="/src/main.jsx">
   <link rel="modulepreload" href="/src/App.jsx">
 
+  <!-- Hero image preloads - match Hero component cascade exactly -->
   <link rel="preload" href="/src/assets/img/restJam_hero1_mobile.webp" as="image" media="(max-width: 768px)">
   <link rel="preload" href="/src/assets/img/restJam_hero1_tablet.webp" as="image"
     media="(min-width: 769px) and (max-width: 1024px)">
