--- a/client/index.html
+++ b/client/index.html
@@ -8,18 +8,151 @@
   <meta name="description"
     content="RestJAM is a platform for creating and sharing your own recommendations for restaurants, food spots, and more.">
   <title>RestJAM</title>
-  <!-- Essential preconnects only -->
+
+  <!-- Critical performance preconnects -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="dns-prefetch" href="https://res.cloudinary.com">
 
-  <!-- Module preloading will be handled by Vite build -->
-  
-  <!-- Critical CSS will be handled by Vite build -->
+  <!-- Critical font preload -->
+  <link rel="preload"
+    href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font"
+    type="font/woff2" crossorigin>
 
-  <!-- Critical LCP image preload - immediately discoverable, no media queries -->
-  <link rel="preload" href="/src/assets/img/restJam_hero1_mobile.webp" as="image" fetchpriority="high">
+  <!-- Critical LCP image preloads - responsive strategy -->
+  <link rel="preload" href="/src/assets/img/restJam_hero1_mobile.webp" as="image" media="(max-width: 768px)"
+    fetchpriority="high">
+  <link rel="preload" href="/src/assets/img/restJam_hero1_tablet.webp" as="image"
+    media="(min-width: 769px) and (max-width: 1024px)" fetchpriority="high">
+  <link rel="preload" href="/src/assets/img/restJam_hero1.webp" as="image" media="(min-width: 1025px)"
+    fetchpriority="high">
+
+  <!-- Critical CSS inline for LCP -->
+  <style>
+    /* Critical above-the-fold styles */
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, sans-serif;
+    }
+
+    #root {
+      min-height: 100vh;
+    }
+
+    /* Critical hero styles for instant LCP */
+    .hero-critical {
+      position: relative;
+      overflow: hidden;
+      border-radius: 1rem;
+      min-height: 40vh;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .hero-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 1rem;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 20;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 40vh;
+      padding: 1.5rem;
+      text-align: center;
+      color: white;
+    }
+
+    /* Critical mobile-first hero background */
+    @media (max-width: 768px) {
+      .hero-critical {
+        background-image: url('/src/assets/img/restJam_hero1_mobile.webp');
+      }
+    }
+
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .hero-critical {
+        background-image: url('/src/assets/img/restJam_hero1_tablet.webp');
+      }
+    }
+
+    @media (min-width: 1025px) {
+      .hero-critical {
+        background-image: url('/src/assets/img/restJam_hero1.webp');
+      }
+    }
+
+    /* Critical typography */
+    .hero-title {
+      font-size: 3.75rem;
+      font-weight: 700;
+      margin-bottom: 1.25rem;
+    }
+
+    .hero-description {
+      font-size: 1.2rem;
+      margin-bottom: 1.25rem;
+      opacity: 0.9;
+    }
+
+    /* Critical button styles */
+    .btn-critical {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: #7c3aed;
+      color: white;
+      border: none;
+      border-radius: 0.5rem;
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-decoration: none;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    .btn-critical:hover {
+      background: #6d28d9;
+    }
+
+    /* Critical layout skeleton to prevent CLS */
+    .layout-critical {
+      min-height: 100vh;
+      display: flex;
+      background: #fff;
+    }
+
+    .sidebar-space {
+      width: 18rem;
+    }
+
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .navbar-space {
+      height: 4rem;
+      background: white;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    @media (max-width: 1024px) {
+      .sidebar-space {
+        display: none;
+      }
+    }
+  </style>
+
+  <!-- Load Google Fonts with font-display swap -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
